--- a/Submission 2/GithubUser/gradle.properties
+++ b/Submission 2/GithubUser/gradle.properties
@@ -21,4 +21,4 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-API_GITHUB_TOKEN="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"
+API_GITHUB_TOKEN="YOUR_GITHUB_TOKEN"
